# PANTHER-Ivy

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .ivyworkspace  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPLETE_DOCKER_COMPOSE_FIX.md  DOCKER_COMPOSE_TEMPLATE_FIX.md  Dockerfile  Dockerfile.buildkit  Dockerfile.multistage  ENVIRONMENT_VARIABLES.md  ENVIRONMENT_VARIABLE_FIX.md  FLEXIBLE_TEMPLATES.md  PACKAGING.md  README.md  USAGE_EXAMPLES.md  __init__.py  _shared.py  build_submodules.py  build_v2_compiler.py  config.yaml  config_schema.py  generate_changelog.py  ivy_analysis_mixin.py  ivy_build_mode_mixin.py  ivy_command_mixin.py  ivy_network_resolution_mixin.py  ivy_output_pattern_mixin.py  ivy_path_template_resolver.py  ivy_protocol_aware_mixin.py  license.txt  panther_ivy.bak.py  panther_ivy.py  panther_ivy.py.backup  panther_ivy.py.old  panther_ivy_plugin.py  plugin.yaml  (+6 more)
api/: __init__.py  _shared.py  compiler.py  discovery.py  executor.py  runner.py  types.py
components/: __init__.py  ivy_command_generator.py  ivy_environment_setup.py  ivy_log_analyzer.py  ivy_output_manager.py  ivy_protocol_handler.py  ivy_test_executor.py
doc/: README  commands.md  credits.md  decidability.md  deploy  index.md  install.md  language.md  proving.ivy  proving.md
docs/: ivy-tools-test-report.md  methodology-reference.md  panther-ivy-serena-plugin-design.md  task-breakdown.md  vmt-rf-integration-plan.md
ivy/: README.md  concept.py  concept_interactive_session.py  dot_layout.py  iupdr.py  ivy.py  ivy_actions.py  ivy_alpha.py  ivy_art.py  ivy_ast.py  ivy_auto_inst.py  ivy_bmc.py  ivy_check.py  ivy_compiler.py  ivy_concept_space.py  ivy_congclos.py  ivy_core.py  ivy_cpp.py  ivy_cpp_types.py  ivy_dafny_ast.py  ivy_dafny_compiler.py  ivy_dafny_grammar.py  ivy_distpy.py  ivy_duoai.py  ivy_ev_parser.py  ivy_ev_viewer.py  ivy_fragment.py  ivy_graph.py  ivy_graph_ui.py  ivy_graphviz.py  ivy_init.py  ivy_interp.py  ivy_isolate.py  ivy_isolate_old.py  ivy_l2s.py  ivy_launch.py  ivy_logic.py  ivy_logic_parser.py  ivy_logic_parser_gen.py  ivy_logic_utils.py  (+40 more)
ivy_lsp/: README.md  __init__.py  __main__.py  server.py
notebooks/: bspline.ipynb  client_server_demo.ipynb  client_server_demo_menus.ipynb  concept_graph.ipynb  flexboxes_bug.ipynb  hotel_with_ins.ivy.ipynb  iframes.ipynb  ivy12.ipynb  (+3 more)
(+6958 files in other folders)
